--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
@@ -4,11 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="36dp"
-    android:paddingEnd="36dp"
-    android:paddingTop="24dp"
-    android:paddingBottom="24dp"
-    tools:context=".registrasi.RegistFragment">
+    tools:context=".registrasi.RegistFragment2">
 
     <ImageView
         android:id="@+id/btnBack"
