--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
@@ -49,7 +49,7 @@
                 android:textSize="14dp" />
 
             <TextView
-                android:id="@+id/PunyaAkun"
+                android:id="@+id/tv_masuk_regist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_semibold"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:padding="16dp"
-                android:fontFamily="@font/poppins_black"
+                android:fontFamily="@font/poppins_semibold"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -109,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:padding="16dp"
-                android:fontFamily="@font/poppins_black"
+                android:fontFamily="@font/poppins_semibold"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -129,7 +129,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:padding="16dp"
-                android:fontFamily="@font/poppins_black"
+                android:fontFamily="@font/poppins_semibold"
                 android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -147,7 +147,7 @@
                 android:inputType="none"
                 android:textSize="14sp"
                 android:padding="16dp"
-                android:fontFamily="@font/poppins_black"
+                android:fontFamily="@font/poppins_semibold"
                 app:simpleItems="@array/simple_items" />
         </com.google.android.material.textfield.TextInputLayout>
 
