--- a/Capstone Project/Mental Health/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,21 @@
         android:id="@+id/navigation_home"
         android:name="id.co.mentalhealth.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_history"
+            app:destination="@id/navigation_history" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_history"
         android:name="id.co.mentalhealth.ui.History.HistoryFragment"
         android:label="@string/title_history"
-        tools:layout="@layout/fragment_history" />
+        tools:layout="@layout/fragment_history" >
+        <action
+            android:id="@+id/action_navigation_history_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
