--- a/Capstone Project/Mental Health/app/src/main/res/values/themes.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/themes.xml
@@ -2,7 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MentalHealth" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryVariant">@color/biru_2</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <item name="colorSecondary">@color/pink</item>
+        <item name="colorSecondaryVariant">@color/biru_2</item>
+        <item name="colorOnSecondary">@color/white</item>
     </style>
 
     <style name="Theme.MentalHealth" parent="Base.Theme.MentalHealth" />
