--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
@@ -79,7 +79,7 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_daftar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,6 +88,9 @@
         android:text="Daftar"
         android:textAllCaps="false"
         android:textSize="16sp"
+        app:backgroundTint="@color/biru_2"
+        android:padding="14dp"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
