--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_login.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.LoginActivity"
+    tools:context=".ui.login.LoginActivity"
     android:padding="24dp">
 
     <ImageView
@@ -69,6 +69,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/btn_lupapw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
