--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="250dp"
         android:layout_marginTop="70dp"
         android:scaleType="center"
         android:src="@drawable/picture"
@@ -26,8 +26,9 @@
         android:fontFamily="@font/poppins_bold"
         android:text="WELCOME TO"
         android:textColor="@color/black"
-        android:textSize="27sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:textSize="24dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -38,8 +39,8 @@
         android:fontFamily="@font/poppins_bold"
         android:text="MENTLY"
         android:textColor="@color/pink"
-        android:textSize="27sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:textSize="24dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -53,7 +54,7 @@
         android:fontFamily="@font/poppins_light"
         android:text="Rawat Diri Anda dengan Menjaga Kesehatan Mental Anda"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/btn_masuk"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
