--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_history.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_history.xml
@@ -39,6 +39,7 @@
         app:layout_constraintTop_toBottomOf="@id/cd_history"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_history_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
