--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
@@ -5,7 +5,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".registrasi.RegistFragment1">
+        tools:context=".ui.registrasi.RegistFragment1">
 
         <ImageView
             android:id="@+id/btnBack"
@@ -134,6 +134,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/txt_jeniskelamin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Jenis Kelamin"
@@ -142,6 +143,7 @@
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
             <AutoCompleteTextView
+                android:id="@+id/dd_jeniskelamin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
@@ -157,8 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Lanjut"
-            android:textAllCaps="false"
+            android:text="LANJUT"
             android:textSize="16sp"
             app:backgroundTint="@color/biru_2"
             android:padding="14dp"
