--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".registrasi.RegistFragment2">
+    tools:context=".ui.registrasi.RegistFragment2">
 
     <ImageView
         android:id="@+id/btnBack"
@@ -85,8 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Daftar"
-        android:textAllCaps="false"
+        android:text="DAFTAR"
         android:textSize="16sp"
         app:backgroundTint="@color/biru_2"
         android:padding="14dp"
