implement Api Login Register

--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
@@ -8,7 +8,7 @@
     android:paddingTop="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailProfileActivity">
+    tools:context=".ui.DetailProfileActivity">
 
     <ImageView
         android:id="@+id/btnBack"
