--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
@@ -49,7 +49,7 @@
                 android:textSize="14dp" />
 
             <TextView
-                android:id="@+id/tv_masuk_regist"
+                android:id="@+id/tv_masuk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_semibold"
