Login,Register,Logout Finish

--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_registrasi.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_registrasi.xml
@@ -9,7 +9,7 @@
     android:paddingEnd="36dp"
     android:paddingTop="24dp"
     android:paddingBottom="24dp"
-    tools:context=".ui.Registrasi_Activity">
+    tools:context=".ui.registrasi.Registrasi_Activity">
 
 
 </FrameLayout>
