--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_lupa_pw.xml
@@ -8,7 +8,7 @@
     android:paddingStart="36dp"
     android:paddingEnd="36dp"
     android:paddingTop="24dp"
-    tools:context=".ui.LupaPwActivity">
+    tools:context=".ui.password.LupaPwActivity">
 
     <ImageView
         android:id="@+id/btnBack"
