--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_profile.xml
@@ -150,11 +150,11 @@
         android:padding="14dp"
         app:cornerRadius="10dp"
         app:backgroundTint="@color/white"
-        android:textColor="@color/biru_2"
-        app:strokeColor="@color/biru_2"
+        android:textColor="@color/blue"
+        app:strokeColor="@color/blue"
         app:strokeWidth="3dp"
         app:icon="@drawable/baseline_logout_24"
-        app:iconTint="@color/biru_2"
+        app:iconTint="@color/blue"
         app:iconGravity="textStart"
         app:iconSize="24dp"
         android:text="Keluar"
