--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_detail_profile.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Back button"
-        android:src="@drawable/baseline_arrow_left_24"
+        android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="@+id/txt_title_informasi"
         app:layout_constraintTop_toTopOf="@+id/txt_title_informasi"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -123,7 +123,7 @@
         android:text="Simpan"
         android:textAllCaps="false"
         android:textSize="16sp"
-        app:backgroundTint="@color/biru_2"
+        app:backgroundTint="@color/blue"
         android:padding="14dp"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
