--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
         android:text="@string/sign_up"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/biru_2"
+        app:backgroundTint="@color/blue"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
