--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist2.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.registrasi.RegistFragment2">
+    tools:context=".ui.auth.registrasi.RegistFragment2">
 
     <ImageView
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Back button"
-        android:src="@drawable/baseline_arrow_left_24"
+        android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="@+id/nomor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/nomor" />
@@ -87,7 +87,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="DAFTAR"
         android:textSize="16sp"
-        app:backgroundTint="@color/biru_2"
+        app:backgroundTint="@color/blue"
         android:padding="14dp"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
