--- a/Capstone Project/Mental Health/app/src/main/res/values/colors.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FF9999</color>
-    <color name="biru_2">#4094A7</color>
+    <color name="blue">#4094A7</color>
     <color name="rendah">#248C2E</color>
     <color name="sedang">#D1C912</color>
     <color name="tinggi">#BE2F2F</color>
