--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_login.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.login.LoginActivity"
-    android:padding="24dp">
+    android:padding="24dp"
+    tools:context=".ui.auth.login.LoginActivity">
 
     <ProgressBar
         android:id="@+id/progressIndicator"
@@ -33,22 +33,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:alpha="0"
         android:fontFamily="@font/poppins_bold"
         android:text="Masuk ke akun"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnBack" />
+        app:layout_constraintTop_toBottomOf="@id/btnBack"
+        tools:alpha="100" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_namapengguna"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:alpha="0"
         android:hint="Username atau Email"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="@+id/txt_login"
-        app:layout_constraintTop_toBottomOf="@+id/txt_login">
+        app:layout_constraintTop_toBottomOf="@+id/txt_login"
+        tools:alpha="100">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_namapengguna"
@@ -65,10 +69,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:alpha="0"
         android:hint="Password"
         app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="@+id/txt_namapengguna"
-        app:layout_constraintTop_toBottomOf="@+id/txt_namapengguna">
+        app:layout_constraintTop_toBottomOf="@+id/txt_namapengguna"
+        tools:alpha="100">
 
         <id.co.mentalhealth.ui.customview.MyPwdEditText
             android:id="@+id/edt_password"
@@ -85,19 +91,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:alpha="0"
         android:fontFamily="@font/poppins_semibold"
         android:text="Lupa Password?"
+        android:textAlignment="center"
         android:textColor="@color/pink"
         android:textSize="14sp"
-        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@id/txt_password"
-        app:layout_constraintTop_toBottomOf="@id/txt_password" />
+        app:layout_constraintTop_toBottomOf="@id/txt_password"
+        tools:alpha="100" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
+        android:alpha="0"
         android:fontFamily="@font/poppins_bold"
         android:padding="14dp"
         android:text="Masuk"
@@ -107,18 +116,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_lupapw" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_lupapw"
+        tools:alpha="100" />
 
     <LinearLayout
         android:id="@+id/btn_buat_akun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="20dp"
+        android:alpha="0"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login">
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        tools:alpha="100">
 
         <TextView
             android:id="@+id/txt_buat_akun"
