--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_regist1.xml
@@ -1,171 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.auth.registrasi.RegistFragment1">
+
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Back button"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintBottom_toBottomOf="@+id/nomor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nomor" />
+
+    <TextView
+        android:id="@+id/nomor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_medium"
+        android:text="1/2"
+        android:textColor="@color/black"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:alpha="0"
+        tools:alpha="100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/txt_Masuk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Sudah Punya Akun?"
+            android:textColor="@color/black"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/tv_masuk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:paddingStart="4dp"
+            android:text="Masuk"
+            android:textColor="@color/pink"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/txt_daftarakun"
+        android:alpha="0"
+        tools:alpha="100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Daftar Akun Baru"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nomor" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_namalengkap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.auth.registrasi.RegistFragment1">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:hint="Nama Lengkap"
+        android:alpha="0"
+        tools:alpha="100"
+        app:endIconMode="clear_text"
+        app:layout_constraintStart_toStartOf="@+id/txt_daftarakun"
+        app:layout_constraintTop_toBottomOf="@+id/txt_daftarakun">
 
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Back button"
-            android:src="@drawable/baseline_arrow_back_24"
-            app:layout_constraintBottom_toBottomOf="@+id/nomor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/nomor" />
-
-        <TextView
-            android:id="@+id/nomor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
-            android:text="1/2"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <TextView
-                android:id="@+id/txt_Masuk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Sudah Punya Akun?"
-                android:textColor="@color/black"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/tv_masuk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_semibold"
-                android:paddingStart="4dp"
-                android:text="Masuk"
-                android:textColor="@color/pink"
-                android:textSize="14dp" />
-
-        </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/txt_daftarakun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="Daftar Akun Baru"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nomor" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txt_namalengkap"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_namalengkap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:hint="Nama Lengkap"
-            app:endIconMode="clear_text"
-            app:layout_constraintStart_toStartOf="@+id/txt_daftarakun"
-            app:layout_constraintTop_toBottomOf="@+id/txt_daftarakun">
+            android:textSize="14sp"
+            android:padding="16dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_namalengkap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:padding="16dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_email"
+        android:alpha="0"
+        tools:alpha="100"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:endIconMode="clear_text"
+        android:hint="Email"
+        app:layout_constraintStart_toStartOf="@+id/txt_namalengkap"
+        app:layout_constraintTop_toBottomOf="@+id/txt_namalengkap">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txt_email"
+        <id.co.mentalhealth.ui.customview.MyEmailEditText
+            android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            app:endIconMode="clear_text"
-            android:hint="Email"
-            app:layout_constraintStart_toStartOf="@+id/txt_namalengkap"
-            app:layout_constraintTop_toBottomOf="@+id/txt_namalengkap">
+            android:textSize="14sp"
+            android:padding="16dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:padding="16dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_umur"
+        android:alpha="0"
+        tools:alpha="100"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:endIconMode="clear_text"
+        android:hint="Umur"
+        app:layout_constraintStart_toStartOf="@+id/txt_email"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txt_umur"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_umur"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            app:endIconMode="clear_text"
-            android:hint="Umur"
-            app:layout_constraintStart_toStartOf="@+id/txt_email"
-            app:layout_constraintTop_toBottomOf="@+id/txt_email">
+            android:textSize="14sp"
+            android:padding="16dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_umur"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:padding="16dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:inputType="number" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_jeniskelamin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Jenis Kelamin"
+        android:alpha="0"
+        tools:alpha="100"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_umur"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txt_jeniskelamin"
+        <AutoCompleteTextView
+            android:id="@+id/dd_jeniskelamin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Jenis Kelamin"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_umur"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
-
-            <AutoCompleteTextView
-                android:id="@+id/dd_jeniskelamin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"
-                android:textSize="14sp"
-                android:padding="16dp"
-                android:fontFamily="@font/poppins_semibold"
-                app:simpleItems="@array/simple_items" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:inputType="none"
+            android:textSize="14sp"
+            android:padding="16dp"
+            android:fontFamily="@font/poppins_semibold"
+            app:simpleItems="@array/simple_items" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_lanjut"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="LANJUT"
-            android:textSize="16sp"
-            app:backgroundTint="@color/blue"
-            android:padding="14dp"
-            app:cornerRadius="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/btn_lanjut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Lanjut"
+        android:alpha="0"
+        tools:alpha="100"
+        android:textSize="16sp"
+        app:backgroundTint="@color/blue"
+        android:padding="14dp"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
