--- a/Capstone Project/Mental Health/app/src/main/res/layout/activity_quest.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/activity_quest.xml
@@ -11,38 +11,38 @@
     android:paddingBottom="24dp"
     tools:context=".ui.quest.QuestActivity">
 
-    <ImageView
-        android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Back button"
-        android:src="@drawable/baseline_arrow_left_24"
-        app:layout_constraintBottom_toBottomOf="@+id/title_quest"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/title_quest" />
-
-    <TextView
-        android:id="@+id/title_quest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Test"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_title_quest"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cd_listPsi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Silahkan isi"
-        android:textSize="16sp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@+id/btnBack"
-        app:layout_constraintTop_toBottomOf="@+id/title_quest" />
+        app:cardBackgroundColor="@color/pink"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_title_quest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_extrabold"
+            android:padding="24dp"
+            android:text="Test"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/noquest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="1/25"
+        app:layout_constraintEnd_toEndOf="@+id/cd_listPsi"
+        app:layout_constraintStart_toStartOf="@+id/cd_listPsi"
+        app:layout_constraintTop_toBottomOf="@+id/cd_listPsi" />
 
     <TextView
         android:id="@+id/tv_description"
@@ -53,7 +53,7 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_quest"
+        app:layout_constraintTop_toBottomOf="@+id/cd_listPsi"
         tools:layout_editor_absoluteX="36dp" />
 
     <RadioGroup
@@ -67,38 +67,63 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/enabled_selected"
+            android:id="@+id/rd1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
             android:enabled="true"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Rendah" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:enabled="true"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Sedang" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:enabled="true"
+            android:padding="8dp"
             android:fontFamily="@font/poppins_medium"
             android:text="Tinggi" />
+
+            <RadioButton
+                android:id="@+id/rd2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:enabled="true"
+                android:padding="8dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Sedang" />
+            <RadioButton
+                android:id="@+id/rd3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:enabled="true"
+                android:padding="8dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Rendah" />
     </RadioGroup>
 
-    <Button
-        android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Selanjutnya"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Kembali"
+        android:layout_weight="1"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Selanjutnya"
+        android:layout_weight="1"
+        android:layout_margin="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
