--- a/Capstone Project/Mental Health/app/src/main/res/layout/fragment_history.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/layout/fragment_history.xml
@@ -42,6 +42,7 @@
         android:id="@+id/list_history_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
