Add Upload Image

--- a/Capstone Project/Mental Health/app/src/main/res/values/colors.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FF9999</color>
     <color name="blue">#4094A7</color>
+    <color name="light_blue">#DEF0F4</color>
     <color name="rendah">#248C2E</color>
     <color name="sedang">#D1C912</color>
     <color name="tinggi">#BE2F2F</color>
